# supermarket

./: .dockerignore  .gitignore  Cargo.toml  Makefile  comment.drawio  comment.http  framework.drawio  http-client.env.json  login.drawio  login.http  login.md  sale.http  sale.md  technology.drawio  user-data.http  user-data.md
comment/: Cargo.toml
comment/src/: main.rs
comment/src/api/: comment.rs
comment/src/domain/: comment.rs
comment/src/repo/: comment.rs  mod.rs
deploy/: Dockerfile  docker-compose.yml  mirror.sh
deploy/init/: mysql.sql
init_ruser/: Cargo.toml
init_ruser/src/: main.rs
local_run/: Cargo.toml
local_run/src/: main.rs
login/: Cargo.toml  build.rs
login/proto/: validate.proto
login/src/: main.rs
login/src/api/: auth.rs  login.rs  mod.rs  validate.rs
login/src/cache/: mod.rs  redis.rs
login/src/domain/: mod.rs  trans_to_token.rs  validate_auth.rs
login/src/pb/: mod.rs  server.rs  validate.rs
login/src/repo/: auth.rs  mod.rs  user.rs
sale/: Cargo.toml
sale/src/: main.rs
sale/src/api/: item.rs
sale/src/domain/: item.rs
sale/src/repo/: item.rs  mod.rs
table_rbs/: Cargo.toml
table_rbs/src/: lib.rs
user_data/: Cargo.toml
user_data/src/: main.rs
user_data/src/api/: home.rs  wallet.rs
user_data/src/domain/: home.rs  mod.rs  wallet.rs
user_data/src/pb/: home.rs  mod.rs  wallet.rs
user_data/src/repo/: home.rs  mod.rs  wallet.rs
util/: Cargo.toml  build.rs
util/proto/: home.proto  validate.proto  wallet.proto
util/src/: lib.rs
util/src/axum/: auth.rs  mod.rs
util/src/log_init/: init.rs
util/src/pb/: client.rs  home.rs  mod.rs  validate.rs  wallet.rs
util/src/rbatis/: get.rs  init.rs
