[package]
name = "comment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
table_rbs={path="../table_rbs"}
util={path="../util"}
axum = {version="0.6.11",features=["default","macros"]}
tower-http = {version = "0.4.0",features=["trace"]}
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tracing="0.1.37"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4.0"
paste = "1.0.12"

rbs = "4.3.1"
rbatis = "4.3.0"
rbdc-mysql = "4.3.1"

anyhow = "1.0.70"
async-trait = "0.1.67"
async-recursion = "1.0.4"

[dev-dependencies]
psutil = "3.2.2"