[package]
name = "table_rbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# macro
proc-macro2 = "1.0.53"
quote = "1.0.26"
syn = {version= "2.0.5",features=["full","extra-traits","test"]}
convert_case = "0.6.0"


[lib]
proc-macro = true
