[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
tower-http = {version = "0.4.0",features=["trace"]}
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"

lazy_static = "1.4.0"
async-trait = "0.1.67"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

paste = "1.0.12"

rbs = "4.3.1"
rbatis = "4.3.0"
rbdc-mysql = "4.3.1"

anyhow = "1.0.70"

log = "0.4.17"

tonic = "0.8.3"
prost = "0.11.8"
futures = "0.3.27"
clap = { version = "4.2.1", features = ["derive"] }
tracing="0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#bitflags = "2.0.0"


[build-dependencies]
tonic-build = "0.8.4"

[dev-dependencies]
tokio-test = "0.4.2"
tower-test = "0.4.0"
http-body = "1.0.0-rc1"
